create emote service for discord